--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -1,19 +1,6 @@
 <div class="cotainer-fluid bg">
     <div class="row">
-        <!-- <div class="col-md-12 "> -->
-
-        <!-- <img [src] >
-
-        </div>
-        <div class="col-md-6">
-            
-            <label > <h3>{{product.name}}</h3></label>
-            <p > {{product.image}} </p>
-
-        </div>
-        <div class="col-md-12">
-            <button class="btn btn-primary"> buy </button>
-            <h5>{{product.prize}}</h5> -->
+        
 
         <div class="card col-md-12 ">
             <div class="row my1">
@@ -25,27 +12,17 @@
                     <!-- <p class="card-text">{{product.image}}</p> -->
                     <p class="card-text"> Prize: {{product.prize}}</p>
                     <p class="card-text"> Detail: {{product.productDetail}}</p> 
+                    <p class="card-text"> ActiveFlag: {{product.activeflag}}</p> 
                 </div>
                 <div class="col-md-12 myCss">
-                    <button class="btn btn-primary btn-tag " (click)="placeOrder(product.id)"> buy at {{product.prize}}
+                    <button class="btn btn-primary btn-tag " *ngIf="product.activeflag" (click)="placeOrder(product.id)"> buy at {{product.prize}}
                     </button>
-        <button class="btn btn-primary btn-tag " *ngIf="this.loginService.isAdminLoggedIn()" (click)="editProduct(product.id,product)"> Edit Product </button>
+                    <button class="btn btn-primary btn-tag " *ngIf="this.loginService.isAdminLoggedIn()" (click)="editProduct(product.id,product)"> Edit Product </button>
+                    <button class="btn btn-primary btn-tag " *ngIf="this.loginService.isAdminLoggedIn()" (click)="changeStatus(product.id,product.activeflag)"> Set ActiveFlag </button>
 
                     <!-- <h5>{{product.prize}}</h5> -->
                 </div>
             </div>
         </div>
-        <!-- </div> -->
     </div>
 </div>
-<!-- 
-<div class="card">
-    <div class="backimmageac">
-        <div class="card-body">
-            <h6 class="card-title">AC Reparing</h6>
-            <br><br><br><br><br><br>
-            <button type="button" class="btn btn-primary">Select
-                your services</button>
-        </div>
-    </div>
-</div> -->
