--- a/src/app/Forms/User/login-form/login-form.component.html
+++ b/src/app/Forms/User/login-form/login-form.component.html
@@ -1,88 +1,3 @@
-<!-- <link rel="icon" type="image/png" href="../../../../assets/favicon.ico" />
-
-<div style="background-color: #666666;">
-
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100">
-                <form class="login100-form needs-validation form " [formGroup]="userloginForm" (ngSubmit)="authenticateData()" >
-                    <span class="login100-form-title p-b-43">
-                        <label>
-                            Login to continue
-                        </label>
-                    </span> -->
-
-<!-- validate-form -->
-
-
-<!-- <div class="wrap-input100 validate-input"> -->
-<!-- <label class="col-md-4 ">Email:</label> -->
-<!-- <input class="input100 form-control" type="text" formControlName="usernames" placeholder="username" autocomplete="username"
-                            [(ngModel)]="username" required>
-                        <span class="focus-input100"></span>
-                        <div *ngIf="submitted && f.usernames?.errors" class="invalid-feedback">
-                            <div *ngIf="f.usernames?.errors?.required">username is required</div>
-                        </div> -->
-<!-- <span class="label-input100">Email</span> -->
-<!-- </div>
-
-
-                    <div class="wrap-input100 validate-input">
-                        <input class="input100 form-control" type="password" formControlName="passwords" placeholder="Password"
-                            [(ngModel)]="password" required>
-                        <span class="focus-input100"></span> -->
-<!-- <span class="label-input100">Password</span> -->
-<!-- </div>
-
-                    <div class="flex-sb-m w-full p-t-3 p-b-32 my  ">
-                        <div class="contact100-form-checkbox">
-                            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                            <label class="label-checkbox100" for="ckb1">
-                                Remember me
-                            </label>
-                        </div>
-
-                        <div>
-                            <a href="#" class="txt1">
-                                Forgot Password?
-                            </a>
-                        </div>
-                    </div> -->
-
-
-<!-- <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" >
-                            Login
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-46 p-b-20 my">
-                        <span class="txt2 ">
-                            <a routerLink="/signup">
-                                Don't have account! Let's get SIGNUP
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="login100-form-social text-center flex-c-m">
-                        <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                            <i class="fa fa-facebook-f" aria-hidden="true"></i>
-                        </a>
-
-                        <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </form>
-
-                <div class="login100-more" style="background-image: url('../../../../assets/bg-01.jpg');">
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
 <link
     href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
     rel="stylesheet" id="bootstrap-css">
@@ -93,19 +8,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
 <div class="main">
-
-
-    <!-- Sing in  Form -->
     <section class="sign-in">
         <div class="container">
-            <div class="signin-content">
-                <div class="signin-image">
-                    <figure><img src="../../../../assets/bg-01.jpg" alt="sing up image"></figure>
-                    <a routerLink="/signup" class="signup-image-link">Create an account</a>
-                </div>
+            <div class="signin-content col-md-8">
                 <form class="login100-form needs-validation form " name="form" [formGroup]="userloginForm"
                     (ngSubmit)="authenticateData()" #f="ngForm">
-                    <!-- Aform -->
                     <div class="signin-form">
                         <h2 class="form-title">Sign In</h2>
                         <div class="form-group">
@@ -130,18 +37,13 @@
 
                             </div>
                         </div>
-                        <div class="form-group">
-                            <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember
-                                me</label>
-                        </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
                             <div class="alert alert-danger" *ngIf="!userloginForm.valid && userloginForm.touched">
                                 Enterd data is
                                 invalid</div>
                         </div>
-
+                        <a routerLink="/signup" class="signup-image-link">Create an account</a>
                     </div>
                     <div class="alert alert-warning" *ngIf="f.submitted && isLoginFailed">
                         Signup failed!<br />{{ errorMessage }}
