--- a/src/app/User/user-list/user-list.component.html
+++ b/src/app/User/user-list/user-list.component.html
@@ -19,10 +19,10 @@
         <button type="submit" class="btn btn-success">User List</button>
       </div>
     </div>
+    <button type="submit" routerLink="/signup" class="btn btn-success">Add new user</button>
 
   </div>
 
-  <!-- <p *ngIf="!adminData.valid && adminData.touched && submitted ">Admin data is Invalid</p> -->
 </form>
 <div class="card my-5">
   <div class="card-body">
@@ -59,18 +59,3 @@
     </table>
   </div>
 </div>
-<!-- <router-outlet></router-outlet> -->
-
-<!-- <button type="button" class="btn btn-primary" (click)="(template)">Create template modal</button> -->
-<!--  
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    This is a modal.
-  </div>
-</ng-template> -->
