--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,12 +1,9 @@
-<div class="row">
+<!-- <div class="row">
    
     <div class="col-md-12">
         <div class="col-md-12 myCss">
             <button class="btn btn-primary btn-tag " (click)="buyProduct()"> Buy new product </button>
-            hello
+            
         </div>
-        <!-- <router-outlet></router-outlet> -->
-
-        
     </div>
-</div>
+</div> -->
