chart and edit profile updated

--- a/src/app/charts/doughnut-chart/doughnut-chart.component.html
+++ b/src/app/charts/doughnut-chart/doughnut-chart.component.html
@@ -1,9 +1,13 @@
 <p>doughnut-chart works!</p>
-<!-- <div class="chart-wrapper">
+<div class="chart-wrapper">
     <canvas baseChart 
-    [data]="doughnutChartData"
-    [labels]="doughnutChartLabels"
-    [chartType]="doughnutChartType">
+    [datasets]="lineChartData" 
+        [labels]="lineChartLabels" 
+        [options]="lineChartOptions"
+        [colors]="lineChartColors" 
+        [legend]="lineChartLegend" 
+        [chartType]="lineChartType" 
+        [plugins]="lineChartPlugins">
   </canvas>
-</div> -->
+</div>
 
