--- a/src/app/User/user-profile/edit-profile/edit-profile.component.html
+++ b/src/app/User/user-profile/edit-profile/edit-profile.component.html
@@ -14,29 +14,43 @@
             <div class="signup-content">
                 <div class="signup-form">
                     <h2 class="form-title">Edit Profile</h2>
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        <input type="text" name="name" id="name" [(ngModel)]="user.username"
-                            placeholder="Your Name" />
+                    <div *ngIf="editUserDetail">
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            <input type="text" name="name" id="name" [(ngModel)]="user.username"
+                                placeholder="Your Name" />
+                        </div>
+                        <div class="form-group">
+                            <label for="email"><i class="zmdi zmdi-email"></i></label>
+                            <input type="email" name="email" id="email" [(ngModel)]="user.email"
+                                placeholder="Your Email" />
+                        </div>
+
+                        <div class="form-group form-button">
+                            <input type="submit" name="signup" id="signup" class="form-submit" (click)="updateData()"
+                                value="Register" />
+                        </div>
+                        <div class="form-group form-button">
+                            <input type="submit" name="signup" id="signup" class="form-submit" (click)="changePassword()"
+                                value="change Password" />
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="email"><i class="zmdi zmdi-email"></i></label>
-                        <input type="email" name="email" id="email" [(ngModel)]="user.email"
-                            placeholder="Your Email" />
-                    </div>
-                    
-                     <div class="form-group">
-                        <label for="password"><i class="zmdi zmdi-lock"></i></label>
-                        <input type="text" name="password" id="password"
-                            [(ngModel)]="user.password" placeholder="Your Password" />
-                    </div>
-                    
-                    <div class="form-group form-button">
-                        <input type="submit" name="signup" id="signup" class="form-submit" (click)="updateData()"
-                            value="Register" />
+
+
+
+                    <div *ngIf="editPassword">
+                        <div class="form-group">
+                            <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                            <input type="text" name="password" id="password" [(ngModel)]="user.password"
+                                placeholder="Your Password" />
+                        </div>
+                        <div class="form-group form-button">
+                            <input type="submit" name="signup" id="signup" class="form-submit" (click)="updatePassword()"
+                                value="Register" />
+                        </div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
     </section>
