--- a/src/app/Forms/product/new-product/new-product.component.html
+++ b/src/app/Forms/product/new-product/new-product.component.html
@@ -1,84 +1,86 @@
-
-
 <link
-href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
-rel="stylesheet" id="bootstrap-css">
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    rel="stylesheet" id="bootstrap-css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"
-id="bootstrap-css">
+    id="bootstrap-css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
 <div class="main">
 
-<section class="signup">
-    <div class="container col-md-12">
-        <div class="signup-content">
-            <div class="signup-form">
-                <form [formGroup]='productRegistration' class="register-form" id="register-form"
-                    (ngSubmit)="saveProduct(productRegistration)">
-                    <h2 class="form-title">Add New Product</h2>
-                    <div class="form-group">
-                        <label for="id"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        <input type="number" name="id" id="id" formControlName="id"
-                            placeholder="Product id" />
-                            <span  *ngIf="!productRegistration.get('id').valid && productRegistration.get('id').touched" class="alert-danger">
+    <section class="signup">
+        <div class="container col-md-12">
+            <div class="signup-content">
+                <div class="signup-form">
+                    <form [formGroup]='productRegistration' class="register-form" id="register-form"
+                        (ngSubmit)="saveProduct(productRegistration)">
+                        <h2 class="form-title">Add New Product</h2>
+                        <div class="form-group">
+                            <label for="id"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            <input type="number" name="id" id="id" formControlName="id" placeholder="Product id" />
+                            <span *ngIf="!productRegistration.get('id').valid && productRegistration.get('id').touched"
+                                class="alert-danger">
                                 please enter valid id
-                             </span>
-                    </div>
-                    <div class="form-group">
-                        <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                        <input type="text" name="name" id="name" formControlName="name"
-                            placeholder="Product Name" />
-                            <span *ngIf="!productRegistration.get('name').valid && productRegistration.get('name').touched" class="alert-danger">
+                            </span>
+                        </div>
+                        <div class="form-group">
+                            <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                            <input type="text" name="name" id="name" formControlName="name"
+                                placeholder="Product Name" />
+                            <span
+                                *ngIf="!productRegistration.get('name').valid && productRegistration.get('name').touched"
+                                class="alert-danger">
                                 please enter valid name
-                             </span>
-                    </div>
-                    <div class="form-group">
-                        <label for="image"><i class="fa fa-file-image-o" aria-hidden="true"></i></label>
-                        <input type="text" name="imge" id="image" formControlName="image"
-                            placeholder="Product Image URL" />
-                            <span *ngIf="!productRegistration.get('image').valid && productRegistration.get('image').touched" class="alert-danger">
+                            </span>
+                        </div>
+                        <div class="form-group">
+                            <label for="image"><i class="fa fa-file-image-o" aria-hidden="true"></i></label>
+                            <input type="text" name="imge" id="image" formControlName="image"
+                                placeholder="Product Image URL" />
+                            <span
+                                *ngIf="!productRegistration.get('image').valid && productRegistration.get('image').touched"
+                                class="alert-danger">
                                 please enter valid image
-                             </span>
-                    </div>
-                    <div class="form-group">
-                        <label for="text"><i class="fa fa-info"></i></label>
-                        <input type="text" name="detail" id="detail" formControlName="productDetail"
-                            placeholder="Prodyct Detail" />
-                            <span *ngIf="!productRegistration.get('productDetail').valid && productRegistration.get('productDetail').touched  " class="alert-danger">
+                            </span>
+                        </div>
+                        <div class="form-group">
+                            <label for="text"><i class="fa fa-info"></i></label>
+                            <input type="text" name="detail" id="detail" formControlName="productDetail"
+                                placeholder="Prodyct Detail" />
+                            <span
+                                *ngIf="!productRegistration.get('productDetail').valid && productRegistration.get('productDetail').touched  "
+                                class="alert-danger">
                                 please enter valid detail
-                             </span>
-                            
-                    </div>
-                    <div class="form-group">
-                        <label for="prize"><i class="fa fa-inr  "></i></label>
-                        <input type="number" name="prize" id="prize" formControlName="prize"
-                            placeholder="Product Prize" />
-                            <span *ngIf="!productRegistration.get('prize').valid && productRegistration.get('prize').touched" class="alert-danger">
+                            </span>
+
+                        </div>
+                        <div class="form-group">
+                            <label for="prize"><i class="fa fa-inr  "></i></label>
+                            <input type="number" name="prize" id="prize" formControlName="prize"
+                                placeholder="Product Prize" />
+                            <span
+                                *ngIf="!productRegistration.get('prize').valid && productRegistration.get('prize').touched"
+                                class="alert-danger">
                                 please enter valid prize
-                             </span>
-                    </div>
-                    
-                    
-                    <div class="form-group form-button">
-                        <input type="submit" name="submit" id="submit" class="form-submit" value="Register"  />
-                <h2 ><a routerLink="/login" class="signup-image-link">Already have an account than Login!</a></h2>
-                    
-                    </div>
-                </form>
+                            </span>
+                        </div>
+
+
+                        <div class="form-group form-button">
+                            <input type="submit" name="submit" id="submit" class="form-submit" value="Register" />
+                            
+
+                        </div>
+                        <div>
+                            {{errorMassage}}
+                        </div>
+                    </form>
+                </div>
+
             </div>
-            
         </div>
-    </div>
-</section>
+    </section>
 
 
 </div>
-
-
-
-
-
-
-
